--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -650,8 +650,7 @@ Finally, recall that following \cite{BallesterosComelliPilo_ThermodynamicsPerfec
 
 We want to compute
 \begin{align}
-    c_a^2 &= \left(\frac{\partial p}{\partial \rho}\right)_\sigma
-    = \frac{\partial p/\partial b_{|\sigma}}{\partial \rho/\partial b_{|\sigma}} 
+    c_a^2 &= \left(\frac{\partial p}{\partial \rho}\right)_{\mid_\sigma}
     %\sim \frac{\partial p/\partial b_{|Y}}{\partial \rho/\partial b_{|Y}},
 \end{align}
 and subtract it off the expression for $c_s^2$ to see the non-barotropic offset.
