--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -734,8 +734,13 @@ Plugging this into the expression for $c_a^2$ we get
         -\big[b\partial_b F- bY\partial_{bY}^2F\big]^2+ Y^2 \partial_Y^2 F \big[Y \partial_YF- b \partial_b F + b^2 \partial_b^2 F\big]
     }.
 \end{align}
+
+Subtracting from the expression for $c_s^2$ in \eqref{eq:nonbarotropic_formulas}, namely
+\begin{align}
+    c_s^2 &= \frac{\big(Y^2\partial_Y^2F\big)\big(b^2\partial_b^2 F\big) -\big[bY\partial_{bY}^2F-Y\partial_YF\big]^2}{\big(Y^2\partial_Y^2F\big)\big[b\partial_b F - Y \partial_Y F\big]},
+\end{align}
 {\color{red}
-Subtracting from the expression for $c_s^2$ we finally get
+we finally get \todotag{check conto below}
 \begin{align}
     c_s^2 - c_a^2
     &=
@@ -744,7 +749,7 @@ Subtracting from the expression for $c_s^2$ we finally get
     &=
     - \frac{\left(bY\partial_{bY}^2F - Y\partial_Y F\right)^2}{Y^2 \partial_Y^2 F \left(b \partial_b F - Y \partial_Y F + b^2 \partial_b^2 F\right)}.
 \end{align}
-This shows that the non-barotropic contribution to the sound speed is always negative (or zero),
+This shows that\footnote{assuming convexity in $Y=T$ for god's sake} the non-barotropic contribution to the sound speed is always negative (or zero),
 \begin{equation}
     c_s^2 \leq c_a^2,
 \end{equation}
