--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -727,12 +727,12 @@ Plugging this into the expression for $c_a^2$ we get
     }
     \\
     &=
-    \frac{
-        \big[Y\partial_Y F- bY\partial_{bY}^2F\big]^2+ b^2 \partial_b^2 F \big[Y \partial_YF- b \partial_b F + Y^2 \partial_Y^2 F\big]
+    -\frac{
+        \big[Y\partial_Y F- bY\partial_{bY}^2F\big]^2+ b^2 \partial_b^2 F \big[Y \partial_YF - Y^2 \partial_Y^2 F - b \partial_b F\big]
     }
     {
-        -\big[b\partial_b F- bY\partial_{bY}^2F\big]^2+ Y^2 \partial_Y^2 F \big[Y \partial_YF- b \partial_b F + b^2 \partial_b^2 F\big]
-    }.
+        \big[b\partial_b F- bY\partial_{bY}^2F\big]^2+ Y^2 \partial_Y^2 F \big[ b \partial_b F - b^2 \partial_b^2 F-Y \partial_YF\big]
+    }. 
 \end{align}
 
 Subtracting from the expression for $c_s^2$ in \eqref{eq:nonbarotropic_formulas}, namely
