--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -748,7 +748,7 @@ For the moment we report the relevant formulas
     c_s^2 &= \frac{\big[Y\partial_YF-bY\partial_{bY}^2F\big]^2 -\big(Y^2\partial_Y^2F\big)\big(b^2\partial_b^2 F\big)}{\big(Y^2\partial_Y^2F\big)\big(Y \partial_YF - b \partial_b F\big)}
     \\
     &= \frac{(Y\partial_Yp)^2 +  (Y\partial_Y\rho)(b\partial_b p)}
-    {(Y\partial_Y\rho)^2\,\,(\rho+p)}
+    {(Y\partial_Y\rho)\,\,(\rho+p)}
     \\
     c_a^2 &= 
     -\frac{
