--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -792,15 +792,18 @@ We have the relations, at fixed number of particles $N=nV$,
 \begin{align}
     \frac{\partial \rho}{\partial T}_{|n} &= \frac{\partial \rho}{\partial T}_{|V}
     = \frac{\partial \rho}{\partial S}_{|V} \frac{\partial S}{\partial T}_{|V}
-    = \frac{\partial (U/V)}{\partial S}_{|V} \frac{-\partial \,(\partial_T F)_{|V}}{\partial T}_{|V} = -\frac{T}{V} \, \partial_T^2 F_{|V}
+    = \frac{\partial (U/V)}{\partial S}_{|V} \frac{-\partial \,(\partial_T F)_{|V}}{\partial T}_{|V} = -\frac{T}{V} \, \partial_T^2 F_{|V},
     \\
     n \frac{\partial \rho}{\partial n}_{|T} &= - V \frac{\partial \rho}{\partial V}_{|T}
     = - V \frac{\partial (U/V)}{\partial V}_{|T}
     = \rho - \frac{\partial U}{\partial V}_{|T}
     =  \rho - \frac{\partial (F+TS)}{\partial V}_{|T}
-    =  \rho + p +T \frac{\partial^2 F}{\partial T \partial V}.
+    =  \rho + p +T \frac{\partial^2 F}{\partial T \partial V},
+    \\
+    \frac{\partial P}{\partial T}_{|n} &= \frac{\partial P}{\partial T}_{|V} = \frac{\partial }{\partial T}_{|V}\left(- \frac{\partial F}{\partial V}_{|T}\right) = - \frac{\partial^2 F}{\partial T \partial V},
+    \\
+    n \frac{\partial P}{\partial n}_{|T} &= -V\frac{\partial P}{\partial V}_{|T} = V \frac{\partial^2 F}{\partial^2 V}_{|T}.
 \end{align}
-We can prove similar relations for $p$\dots \todotag{write them}
 Using convexity of $F$  and rewriting $c_s^2 - c_a^2$ in terms of its derivatives we might be able to show positivity...
 }
 \bigskip
