--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -932,6 +932,7 @@ Indeed, in the nonbarotropic case $c_s^2$ might only be definable trhough the fl
 \noindent
 \textbf{Strategy 3 (the only possibly working): use $w$ and $\rho$ as your variables.}
 Express everything in terms of these and their derivatives and check something sensible comes out.
+This requires inverting the relations above, which might be cumbersome and nearly impossible in full generality.
 \smallskip
 
 \noindent
