--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -882,30 +882,53 @@ Taking the difference we have
         \Big[T^2\big(\partial_T^2A\big)\big(\partial_V^2A\big)-\big[(\rho+P)+T\partial_{TV}^2A\big]^2-(\rho+P)\tfrac{T^2}{V}\partial_T^2A\Big]
     }
 \end{align}
-The condition for posivity then reads
+The second principle of  thermodynamics implies that $\partial_T^2A=-\partial_TS\leq 0$.
+Therefore, assuming only the second principle, the condition for posivity reads
 \begin{align}
-    c_s^2-c_a^2 \geq 0 \quad \Leftrightarrow \quad \Big[T^2\big(\partial_T^2A\big)\big(\partial_V^2A\big)-\big[(\rho+P)+T\partial_{TV}^2A\big]^2-(\rho+P)\tfrac{T^2}{V}\partial_T^2A\Big] \geq 0.
+    c_s^2-c_a^2 \geq 0 \quad \Leftrightarrow \quad \frac{1}{(\rho+P)}\bigg\{\underbrace{-T^2\big(\partial_T^2A\big)}_{\geq0}\Big[\big(\partial_V^2A\big)-\tfrac{(\rho+P)}{V}\Big]+\underbrace{\Big[(\rho+P)+T\partial_{TV}^2A\Big]^2}_{\geq 0} \bigg\}\geq 0.
 \end{align}
-This can equivalently be expressed in terms of the specific free-energy $\mathfrak{a}=A/V$ as
+This could equivalently be expressed in terms of the specific free-energy $\mathfrak{a}=A/V$ as
 \begin{align}
     c_s^2-c_a^2 \geq 0 \quad \Leftrightarrow \quad \cdots
 \end{align}
+We might be able to explicitate this condition further using Maxwell relations.\todotag{do it}
+In non-phantom regime $\rho+P\geq 0$ the condition simplifies to
+\begin{align}
+    c_s^2-c_a^2 \geq 0 \quad \Leftrightarrow \quad \underbrace{-T^2\big(\partial_T^2A\big)}_{\geq0}\Big[\underbrace{\big(\partial_V^2A\big)}_{\geq0}-\tfrac{(\rho+P)}{V}\Big]+\underbrace{\Big[(\rho+P)+T\partial_{TV}^2A\Big]^2}_{\geq 0}\geq 0.
+\end{align}
+Also note that imposing further thermodynamic, namely \emph{positive compressibility}, gives
+\begin{equation}
+    -\frac{\partial P}{\partial V}_{|T} = \frac{\partial^2 A}{\partial V^2}_{|T} \geq 0.
+\end{equation}
+
+
 %
-Finally, we translate this into a condition on $F(b,Y)$ using the relations above.
-Namely, using $b=n$, $Y=T$ and 
+Now we now translate everything into a condition on $F(b,Y)$.
+Recall the relations $b=n$, $Y=T$ and 
 \begin{align}
     \rho&= Y\partial_YF-F,\quad P=F-b\partial_bF,\quad \sigma=\tfrac{\rho+p}{Tn} = \tfrac{Y \partial_Y F - b \partial_b F}{Y b},
     \\
     A&= U-TS = V(\rho-T n \sigma) = -VP = V\big(b \partial_b F-F\big),\quad \mathfrak{a}=-P= -F + b \partial_b F.
 \end{align}
-The condition on the function $F(b,Y)$ for positivity of $c_s^2 - c_a^2$ then reads
+Using $\partial_V= -\frac{b}{V}\partial_b$ and $\partial_T=\partial_Y$ we also have
 \begin{align}
-    c_s^2-c_a^2 \geq 0 \quad \Leftrightarrow \quad \cdots
+    T^2\partial_T^2 A_{|V} &=  V \big(bY^2\partial_b\partial_Y^2F - Y^2 \partial_Y^2 F\big),
+    \\
+    \partial_V^2 A_{|T} &= \frac{1}{V}\big(b^2\partial_b^2F+b^3\partial_b^3F\big),
+    \\
+    T\partial_{TV}^2 A &= bY\partial_b\partial_Y F -Y\partial_Y F - Yb^2 \partial_b^2\partial_YF.
 \end{align}
-In fact, it is more convenient to use the variables $Y=T$ and $b=n$, rather than $V$ and $T$, and use the explicit formula for $\mathfrak{a}$.
-We get
+Finally, the condition on the function $F(b,Y)$ for positivity of $c_s^2 - c_a^2\geq 0$ reads \todotag{Check exp for F}
 \begin{align}
-    c_s^2-c_a^2 \geq 0 \quad \Leftrightarrow \quad \cdots
+    \frac{1}{\rho+P}&\bigg\{\Big[(\rho+P)+T\partial_{TV}^2A\Big]^2\underbrace{-T^2\big(\partial_T^2A\big)}_{\geq 0}\Big[\underbrace{\partial_V^2A}_{\geq 0}-\tfrac{\rho+P}{V}\Big]\bigg\}
+    \\
+    &= \frac{
+    \Big[b\partial_bF - bY\partial_b\partial_YF+b^2Y\partial_b^2\partial_YF\Big]^2
+    -\big(Y^2b\partial_Y^2\partial_bF - Y^2\partial_Y^2F\big)
+    \cdot
+    \big(b\partial_bF + b^2\partial_b^2F+b^3\partial_b^3F\big)
+    }
+    {\partial_YF-b\partial_bF} \geq 0.
 \end{align}
 }
 \bigskip
